v1.1.0/modules/schema/pages/class/FailureEvent.adoc
= `FailureEvent`
:toclevels: 4


+++An event where an asset has failed to perform its functions within specified parameters. This class is intended to reflect the failure itself. Additional information resulting from forensic analysis could be captured by a diagnosis data set.+++


[cols="h,3",width=65%]
|===
| Type
| Class

| URI
| `cim:FailureEvent`


| CIM standard (perspective)
| IEC61968 (Enterprise)



|===

== Class hierarchy
* xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
** xref::class/ActivityRecord.adoc[`ActivityRecord`]
*** *`FailureEvent`*


== Slots




[cols="1,1,2,1",width=100%]
|===
| Name | Type | Description | Inherited from

| <<breakerFailureReason,`breakerFailureReason`>>
//| [[slots_table.breakerFailureReason]]<<breakerFailureReason,`breakerFailureReason`>>
| 0..1 +
xref::enumeration/BreakerFailureReasonKind.adoc[`BreakerFailureReasonKind`]
| +++Reason for breaker failure.+++
| _n/a_

| <<corporateCode,`corporateCode`>>
//| [[slots_table.corporateCode]]<<corporateCode,`corporateCode`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++Code for asset failure.+++
| _n/a_

| <<failureClassification,`failureClassification`>>
//| [[slots_table.failureClassification]]<<failureClassification,`failureClassification`>>
| 0..1 +
xref::enumeration/AssetFailureClassification.adoc[`AssetFailureClassification`]
| +++Classification of failure.+++
| _n/a_

| <<failureDateTime,`failureDateTime`>>
//| [[slots_table.failureDateTime]]<<failureDateTime,`failureDateTime`>>
| 0..1 +
https://w3id.org/linkml/Date[`date`]
| +++Time and date of asset failure.+++
| _n/a_

| <<failureIsolationMethod,`failureIsolationMethod`>>
//| [[slots_table.failureIsolationMethod]]<<failureIsolationMethod,`failureIsolationMethod`>>
| 0..1 +
xref::enumeration/FailureIsolationMethodKind.adoc[`FailureIsolationMethodKind`]
| +++How the asset failure was isolated from the system.+++
| _n/a_

| <<failureMode,`failureMode`>>
//| [[slots_table.failureMode]]<<failureMode,`failureMode`>>
| 1 +
xref::enumeration/AssetFailureMode.adoc[`AssetFailureMode`]
| +++What asset failed to be able to do.+++
| _n/a_

| <<faultLocatingMethod,`faultLocatingMethod`>>
//| [[slots_table.faultLocatingMethod]]<<faultLocatingMethod,`faultLocatingMethod`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The method used for locating the faulted part of the asset. For example, cable options include: Cap Discharge-Thumping,...+++
| _n/a_

| <<location,`location`>>
//| [[slots_table.location]]<<location,`location`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++Failure location on an object.+++
| _n/a_

| <<rootCause,`rootCause`>>
//| [[slots_table.rootCause]]<<rootCause,`rootCause`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++Root cause of asset failure.+++
| _n/a_

| <<transformerFailureReason,`transformerFailureReason`>>
//| [[slots_table.transformerFailureReason]]<<transformerFailureReason,`transformerFailureReason`>>
| 0..1 +
xref::enumeration/TransformerFailureReasonKind.adoc[`TransformerFailureReasonKind`]
| +++Reason for transformer failure.+++
| _n/a_

| <<Assets,`Assets`>>
//| [[slots_table.Assets]]<<Assets,`Assets`>>
| 0..* +
xref::class/Asset.adoc[`Asset`]
| +++All assets for which this activity record has been created.+++
| xref::class/ActivityRecord.adoc[`ActivityRecord`]

| <<Author,`Author`>>
//| [[slots_table.Author]]<<Author,`Author`>>
| 0..1 +
xref::class/Author.adoc[`Author`]
| +++Author of this activity record.+++
| xref::class/ActivityRecord.adoc[`ActivityRecord`]

| <<Document,`Document`>>
//| [[slots_table.Document]]<<Document,`Document`>>
| 0..1 +
xref::class/Document.adoc[`Document`]
| +++The document having associated activity records+++
| xref::class/ActivityRecord.adoc[`ActivityRecord`]

| <<createdDateTime,`createdDateTime`>>
//| [[slots_table.createdDateTime]]<<createdDateTime,`createdDateTime`>>
| 0..1 +
https://w3id.org/linkml/Date[`date`]
| +++Date and time this activity record has been created (different from the 'status.dateTime', which is the time of a status...+++
| xref::class/ActivityRecord.adoc[`ActivityRecord`]

| <<reason,`reason`>>
//| [[slots_table.reason]]<<reason,`reason`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++Reason for event resulting in this activity record, typically supplied when user initiated.+++
| xref::class/ActivityRecord.adoc[`ActivityRecord`]

| <<severity,`severity`>>
//| [[slots_table.severity]]<<severity,`severity`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++Severity level of event resulting in this activity record.+++
| xref::class/ActivityRecord.adoc[`ActivityRecord`]

| <<status,`status`>>
//| [[slots_table.status]]<<status,`status`>>
| 0..1 +
xref::class/Status.adoc[`Status`]
| +++Information on consequence of event resulting in this activity record.+++
| xref::class/ActivityRecord.adoc[`ActivityRecord`]

| <<type,`type`>>
//| [[slots_table.type]]<<type,`type`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++Type of event resulting in this activity record.+++
| xref::class/ActivityRecord.adoc[`ActivityRecord`]

| <<DiagramObjects,`DiagramObjects`>>
//| [[slots_table.DiagramObjects]]<<DiagramObjects,`DiagramObjects`>>
| 0..* +
xref::class/DiagramObject.adoc[`DiagramObject`]
| +++The diagram objects that are associated with the domain object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<InstanceSet,`InstanceSet`>>
//| [[slots_table.InstanceSet]]<<InstanceSet,`InstanceSet`>>
| 1 +
xref::class/InstanceSet.adoc[`InstanceSet`]
| +++Dataset containing the data objects.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<Names,`Names`>>
//| [[slots_table.Names]]<<Names,`Names`>>
| 0..* +
xref::class/Name.adoc[`Name`]
| +++All names of this identified object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
//| [[slots_table.PropertiesCIMDataObject]]<<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
| 0..1 +
xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++The single CIM data object in the appropriate dataset context.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<TargetingCIMDataObject,`TargetingCIMDataObject`>>
//| [[slots_table.TargetingCIMDataObject]]<<TargetingCIMDataObject,`TargetingCIMDataObject`>>
| 0..* +
xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++Data objects registered.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<aliasName,`aliasName`>>
//| [[slots_table.aliasName]]<<aliasName,`aliasName`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<description,`description`>>
//| [[slots_table.description]]<<description,`description`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<mRID,`mRID`>>
//| [[slots_table.mRID]]<<mRID,`mRID`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<name,`name`>>
//| [[slots_table.name]]<<name,`name`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The name is any free human readable and possibly non unique text naming the object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
|===

'''


//[discrete]
[#aliasName]
=== `aliasName`
+++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.aliasName`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.aliasName,&#10548;>>
--
////


//[discrete]
[#Assets]
=== `Assets`
+++All assets for which this activity record has been created.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ActivityRecord.Assets`
| Cardinality
| 0..*
| Type
| xref::class/Asset.adoc[`Asset`]

| Inherited from
| xref::class/ActivityRecord.adoc[`ActivityRecord`]


|===

////
[.text-left]
--
<<slots_table.Assets,&#10548;>>
--
////


//[discrete]
[#Author]
=== `Author`
+++Author of this activity record.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ActivityRecord.Author`
| Cardinality
| 0..1
| Type
| xref::class/Author.adoc[`Author`]

| Inherited from
| xref::class/ActivityRecord.adoc[`ActivityRecord`]


|===

////
[.text-left]
--
<<slots_table.Author,&#10548;>>
--
////


//[discrete]
[#breakerFailureReason]
=== `breakerFailureReason`
+++Reason for breaker failure.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:FailureEvent.breakerFailureReason`
| Cardinality
| 0..1
| Type
| xref::enumeration/BreakerFailureReasonKind.adoc[`BreakerFailureReasonKind`]


|===

////
[.text-left]
--
<<slots_table.breakerFailureReason,&#10548;>>
--
////


//[discrete]
[#corporateCode]
=== `corporateCode`
+++Code for asset failure.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:FailureEvent.corporateCode`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]


|===

////
[.text-left]
--
<<slots_table.corporateCode,&#10548;>>
--
////


//[discrete]
[#createdDateTime]
=== `createdDateTime`
+++Date and time this activity record has been created (different from the 'status.dateTime', which is the time of a status change of the associated object, if applicable).+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ActivityRecord.createdDateTime`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Date[`date`]

| Inherited from
| xref::class/ActivityRecord.adoc[`ActivityRecord`]


|===

////
[.text-left]
--
<<slots_table.createdDateTime,&#10548;>>
--
////


//[discrete]
[#description]
=== `description`
+++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.description`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.description,&#10548;>>
--
////


//[discrete]
[#DiagramObjects]
=== `DiagramObjects`
+++The diagram objects that are associated with the domain object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.DiagramObjects`
| Cardinality
| 0..*
| Type
| xref::class/DiagramObject.adoc[`DiagramObject`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.DiagramObjects,&#10548;>>
--
////


//[discrete]
[#Document]
=== `Document`
+++The document having associated activity records+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ActivityRecord.Document`
| Cardinality
| 0..1
| Type
| xref::class/Document.adoc[`Document`]

| Inherited from
| xref::class/ActivityRecord.adoc[`ActivityRecord`]


|===

////
[.text-left]
--
<<slots_table.Document,&#10548;>>
--
////


//[discrete]
[#failureClassification]
=== `failureClassification`
+++Classification of failure.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:FailureEvent.failureClassification`
| Cardinality
| 0..1
| Type
| xref::enumeration/AssetFailureClassification.adoc[`AssetFailureClassification`]


|===

////
[.text-left]
--
<<slots_table.failureClassification,&#10548;>>
--
////


//[discrete]
[#failureDateTime]
=== `failureDateTime`
+++Time and date of asset failure.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:FailureEvent.failureDateTime`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Date[`date`]


|===

////
[.text-left]
--
<<slots_table.failureDateTime,&#10548;>>
--
////


//[discrete]
[#failureIsolationMethod]
=== `failureIsolationMethod`
+++How the asset failure was isolated from the system.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:FailureEvent.failureIsolationMethod`
| Cardinality
| 0..1
| Type
| xref::enumeration/FailureIsolationMethodKind.adoc[`FailureIsolationMethodKind`]


|===

////
[.text-left]
--
<<slots_table.failureIsolationMethod,&#10548;>>
--
////


//[discrete]
[#failureMode]
=== `failureMode`
+++What asset failed to be able to do.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:FailureEvent.failureMode`
| Cardinality
| 1
| Type
| xref::enumeration/AssetFailureMode.adoc[`AssetFailureMode`]


|===

////
[.text-left]
--
<<slots_table.failureMode,&#10548;>>
--
////


//[discrete]
[#faultLocatingMethod]
=== `faultLocatingMethod`
+++The method used for locating the faulted part of the asset. For example, cable options include: Cap Discharge-Thumping, Bridge Method, Visual Inspection, Other.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:FailureEvent.faultLocatingMethod`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]


|===

////
[.text-left]
--
<<slots_table.faultLocatingMethod,&#10548;>>
--
////


//[discrete]
[#InstanceSet]
=== `InstanceSet`
+++Dataset containing the data objects.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.InstanceSet`
| Cardinality
| 1
| Type
| xref::class/InstanceSet.adoc[`InstanceSet`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.InstanceSet,&#10548;>>
--
////


//[discrete]
[#location]
=== `location`
+++Failure location on an object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:FailureEvent.location`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]


|===

////
[.text-left]
--
<<slots_table.location,&#10548;>>
--
////


//[discrete]
[#mRID]
=== `mRID`
+++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.mRID`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.mRID,&#10548;>>
--
////


//[discrete]
[#name]
=== `name`
+++The name is any free human readable and possibly non unique text naming the object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.name`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.name,&#10548;>>
--
////


//[discrete]
[#Names]
=== `Names`
+++All names of this identified object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.Names`
| Cardinality
| 0..*
| Type
| xref::class/Name.adoc[`Name`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.Names,&#10548;>>
--
////


//[discrete]
[#PropertiesCIMDataObject]
=== `PropertiesCIMDataObject`
+++The single CIM data object in the appropriate dataset context.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.PropertiesCIMDataObject`
| Cardinality
| 0..1
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.PropertiesCIMDataObject,&#10548;>>
--
////


//[discrete]
[#reason]
=== `reason`
+++Reason for event resulting in this activity record, typically supplied when user initiated.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ActivityRecord.reason`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/ActivityRecord.adoc[`ActivityRecord`]


|===

////
[.text-left]
--
<<slots_table.reason,&#10548;>>
--
////


//[discrete]
[#rootCause]
=== `rootCause`
+++Root cause of asset failure.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:FailureEvent.rootCause`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]


|===

////
[.text-left]
--
<<slots_table.rootCause,&#10548;>>
--
////


//[discrete]
[#severity]
=== `severity`
+++Severity level of event resulting in this activity record.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ActivityRecord.severity`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/ActivityRecord.adoc[`ActivityRecord`]


|===

////
[.text-left]
--
<<slots_table.severity,&#10548;>>
--
////


//[discrete]
[#status]
=== `status`
+++Information on consequence of event resulting in this activity record.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ActivityRecord.status`
| Cardinality
| 0..1
| Type
| xref::class/Status.adoc[`Status`]

| Inherited from
| xref::class/ActivityRecord.adoc[`ActivityRecord`]


|===

////
[.text-left]
--
<<slots_table.status,&#10548;>>
--
////


//[discrete]
[#TargetingCIMDataObject]
=== `TargetingCIMDataObject`
+++Data objects registered.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.TargetingCIMDataObject`
| Cardinality
| 0..*
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.TargetingCIMDataObject,&#10548;>>
--
////


//[discrete]
[#transformerFailureReason]
=== `transformerFailureReason`
+++Reason for transformer failure.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:FailureEvent.transformerFailureReason`
| Cardinality
| 0..1
| Type
| xref::enumeration/TransformerFailureReasonKind.adoc[`TransformerFailureReasonKind`]


|===

////
[.text-left]
--
<<slots_table.transformerFailureReason,&#10548;>>
--
////


//[discrete]
[#type]
=== `type`
+++Type of event resulting in this activity record.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:ActivityRecord.type`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/ActivityRecord.adoc[`ActivityRecord`]


|===

////
[.text-left]
--
<<slots_table.type,&#10548;>>
--
////





== Used by


This class is not used by any other classes as the range of a slot.
